# dev-apps

./: .gitignore  .gitmodules  README.md  clang_format.sh  dev-apps.code-workspace
apps/adxl345/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
apps/adxl345/src/: main.c
apps/bmp180/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
apps/bmp180/src/: main.c
apps/lsm303/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf  sample.yaml
apps/lsm303/src/: main.c
